@@ -500,6 +500,7 @@ int mosquitto_plugin_init(mosquitto_plugin_id_t *identifier, void **user_data, s
 	}
 
 	plg_id = identifier;
+	mosquitto_plugin_set_info(identifier, "dynamic-security", NULL);
 
 	dynsec__config_load();
 	mosquitto_callback_register(plg_id, MOSQ_EVT_CONTROL, dynsec_control_callback, "$CONTROL/dynamic-security/v1", NULL);
