@@ -43,6 +43,8 @@ Contributors:
 #include "mqtt_protocol.h"
 
 #define TS_BUF_LEN (14+1)  // 14 characters in unix epoch (ms) is ≈16 Nov 5138
+#define PLUGIN_NAME "add-properties"
+#define PLUGIN_VERSION "1.0"
 
 static mosquitto_plugin_id_t *mosq_pid = NULL;
 
@@ -106,6 +108,7 @@ int mosquitto_plugin_init(mosquitto_plugin_id_t *identifier, void **user_data, s
 	UNUSED(opt_count);
 
 	mosq_pid = identifier;
+	mosquitto_plugin_set_info(identifier, PLUGIN_NAME, PLUGIN_VERSION);
 	return mosquitto_callback_register(mosq_pid, MOSQ_EVT_MESSAGE, callback_message, NULL, NULL);
 }
 
