@@ -42,6 +42,9 @@ Contributors:
 #include "mosquitto.h"
 #include "mqtt_protocol.h"
 
+#define PLUGIN_NAME "auth-by-ip"
+#define PLUGIN_VERSION "1.0"
+
 static mosquitto_plugin_id_t *mosq_pid = NULL;
 
 static int basic_auth_callback(int event, void *event_data, void *userdata)
@@ -80,6 +83,7 @@ int mosquitto_plugin_init(mosquitto_plugin_id_t *identifier, void **user_data, s
 	UNUSED(opt_count);
 
 	mosq_pid = identifier;
+	mosquitto_plugin_set_info(identifier, PLUGIN_NAME, PLUGIN_VERSION);
 	return mosquitto_callback_register(mosq_pid, MOSQ_EVT_BASIC_AUTH, basic_auth_callback, NULL, NULL);
 }
 
