@@ -40,6 +40,9 @@ Contributors:
 #include "mosquitto.h"
 #include "mqtt_protocol.h"
 
+#define PLUGIN_NAME "connection-state"
+#define PLUGIN_VERSION "1.0"
+
 #define UNUSED(A) (void)(A)
 
 static mosquitto_plugin_id_t *mosq_pid = NULL;
@@ -115,6 +118,7 @@ int mosquitto_plugin_init(mosquitto_plugin_id_t *identifier, void **user_data, s
 	UNUSED(opt_count);
 
 	mosq_pid = identifier;
+	mosquitto_plugin_set_info(identifier, PLUGIN_NAME, PLUGIN_VERSION);
 
 	rc = mosquitto_callback_register(mosq_pid, MOSQ_EVT_CONNECT, connect_callback, NULL, NULL);
 	if(rc) return rc;
