@@ -10,6 +10,9 @@
 #include "mosquitto.h"
 #include "mqtt_protocol.h"
 
+#define PLUGIN_NAME "print-ip-on-publish"
+#define PLUGIN_VERSION "1.0"
+
 static mosquitto_plugin_id_t *mosq_pid = NULL;
 
 static char my_topic[] = "troublesome/topic";
@@ -46,6 +49,7 @@ int mosquitto_plugin_init(mosquitto_plugin_id_t *identifier, void **user_data, s
 	UNUSED(opt_count);
 
 	mosq_pid = identifier;
+	mosquitto_plugin_set_info(identifier, PLUGIN_NAME, PLUGIN_VERSION);
 	return mosquitto_callback_register(mosq_pid, MOSQ_EVT_MESSAGE, message_callback, NULL, NULL);
 }
 
