@@ -49,6 +49,8 @@ Broker:
   when a connection attempts an upgrade to WebSockets.
 - Allow mosquitto_ctrl dynsec module to update passwords in files rather than
   having to connect to a broker.
+- Add `mosquitto_plugin_set_info()` to allow plugins to tell the broker their
+  name and version.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
